--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "jwt-decode": "^3.1.2",
+    "mapbox-gl": "^2.0.1",
+    "mapbox-gl-style-switcher": "^1.0.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
