--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "mapbox-gl-style-switcher": "^1.0.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-map-gl": "^6.0.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
