--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "react-icons": "^4.1.0",
+    "react-map-gl": "^6.0.2",
     "validator": "^13.5.2"
   }
 }
