--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@mapbox/mapbox-gl-geocoder": "^4.7.0",
+    "aws-sdk": "^2.828.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -34,6 +35,8 @@
     "mapbox-gl-style-switcher": "^1.0.9",
     "mongoose": "^5.11.8",
     "mongoose-seed": "^0.6.0",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "react-icons": "^4.1.0",
